# Dowse

./: .gitignore  AGENTS.md  CHANGELOG.md  CONTEXT.md  README.md  RELEASE.md  SECURITY.md  pyproject.toml  requirements.txt  test_pipeline.py
.github/: CODEOWNERS
.github/workflows/: ci.yml  release.yml
dowse/: __init__.py  _dist.py  bootstrap.py  cli.py  cursor_hooks.py  definitions.py  embed.py  extract.py  models.py  server.py  server_lock.py  service.py  store.py
skills/dowse-cli/: SKILL.md  pi-extension.ts
skills/dowse-setup/: EXAMPLES.md  SKILL.md
tests/: conftest.py  test_ci_smoke.py  test_dist.py  test_doctor.py  test_embed.py  test_hooks.py  test_ignore.py  test_init.py  test_languages.py  test_mcp.py  test_packaging.py  test_pipeline.py  test_release.py  test_status.py
